kubernetes/mediaplayback/wrapperr/wrapperr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wrapperr
  namespace: mediaplayback
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 24h"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: wrapperr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wrapperr
    spec:
      containers:
      - name: wrapperr
        image: ghcr.io/aunefyren/wrapperr:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        
        ports:
        - name: http
          containerPort: 8282
          protocol: TCP
        
        startupProbe:
          httpGet:
            path: /
            port: 8282
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 30
          successThreshold: 1
        
        readinessProbe:
          httpGet:
            path: /
            port: 8282
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
          successThreshold: 1
        
        livenessProbe:
          httpGet:
            path: /
            port: 8282
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 3
          failureThreshold: 3
          successThreshold: 1
